Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19795

AutoTest: displays tests as fail on critical outputs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.6.0-rc1
    • Qt Creator 4.6.0-beta1
    • Test Integration
    • None
    •  

       
    • e6f2d19b268310e769d7da80f786fedbe73d5038

      If a test has a qCritical() output, but passed, auto test displays it as failed. This infect is a interessting behavior, but should not be default.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cstenger Christian Stenger
            zerocom Stefan Sommerfeld
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes