AutoTest: Handle qCritical also for text based output

Task-number: QTCREATORBUG-19795
Change-Id: I0bbfecd4002df1958a3fc5cd795e193b1cb83cbd
Reviewed-by: David Schulz <david.schulz@qt.io>